SingularityUI/app/styles/search.styl
@import nib
@import colors

section input[type="search"][required].with-search-options
    font-size 1.75em
    height 83px
    padding 1rem
    margin-bottom 1rem
    line-height 1.5em
    float left
    width 49%
    margin-right 2%

    @media (max-width: 980px)
        float none
        width: 100%

    @media (max-width: 767px)
        height auto

    &::-webkit-search-cancel-button:after
        font-size 2rem
        right: 1rem
        top: .5rem

.search-options
    clearfix()
    text-align left
    white-space nowrap
    float left
    width 48%

    @media (max-width: 980px)
        float none
        width 100%

    @media (max-width: 767px)
        display none

    .options-category-group
        background rgba(0, 0, 0, .05)
        padding 10px
        float left
        width 48%
        text-align center
        overflow hidden

        h4
            text-align center
            margin-bottom 7px
            font-weight normal
            text-transform uppercase
            font-size 11px
            letter-spacing 1px

        &:first-child
            margin-right 4%

    .options-group
        margin-right 5px
        display inline-block

        &:last-child
            margin-right 0

        ul, li
            padding 0
            margin 0
            list-style none

        a[data-selected="true"]
            color inherit
            text-decoration none
            cursor default

